--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header" >
         <div id="div__logo" > 
               <a href="#menu" id="tog" onclick="" class="icon open"><span class="iconify" data-icon="dashicons:menu-alt3" data-inline="false"></span></a> 
-              <img class="logo" src="/multimedia/H&E.jpg" alt="logo del sitio web"> 
+              <img class="logo" src="multimedia/H&E.jpg" alt="logo del sitio web"> 
          </div>
           
          <div>
